# imgui_sdl_skeleton

./: .gitignore  CMakeLists.txt  README.md  config.h  main.cpp
.github/workflows/: scheduler.yml
overlays/: Performance.cpp  Performance.h  performance.cpp
sdl/linux/: SDL_revision-x86_64.h
statemachine/: Stm.cpp  Stm.h
